--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4.21"
 env_logger = "0.11.3"
 parquet = { version = "40.0.0", features = ["cli"] }
 arrow = { version = "40.0.0", features = ["chrono-tz"] }
-clap = "2.33.4"
+clap = { version = "4.5.4", features = ["derive"] }
 rand = "0.8.5"
 tempfile = "3.10.1"
 walkdir = "2.5.0"
