update contributor info for release

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -33,6 +33,7 @@ release:
       preset: conventional-commits
       contributors:
         enabled: true
+        format: '- {{contributorName}}{{#contributorUsernameAsLink}} ({{.}}){{/contributorUsernameAsLink}}'
 
 assemble:
   archive:
