--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,9 +44,9 @@ jobs:
         job:
           - { target: aarch64-apple-darwin        , os: macos-latest     ,                  jreleaser_platform: osx-aarch_64   }
           - { target: x86_64-apple-darwin         , os: macos-latest     ,                  jreleaser_platform: osx-x86_64     }
-          - { target: x86_64-pc-windows-msvc      , os: windows-2019 ,                  jreleaser_platform: windows-x86_64 }
-          - { target: x86_64-unknown-linux-gnu    , os: ubuntu-20.04 ,                  jreleaser_platform: linux-x86_64   }
-          - { target: aarch64-unknown-linux-gnu   , os: ubuntu-20.04 , use-cross: true, jreleaser_platform: linux-aarch_64 }
+          - { target: x86_64-pc-windows-msvc      , os: windows-latest ,                  jreleaser_platform: windows-x86_64 }
+          - { target: x86_64-unknown-linux-gnu    , os: ubuntu-latest ,                  jreleaser_platform: linux-x86_64   }
+          - { target: aarch64-unknown-linux-gnu   , os: ubuntu-latest , use-cross: true, jreleaser_platform: linux-aarch_64 }
     runs-on: ${{ matrix.job.os }}
 
     steps:
